# Kraken

./: .gitignore  CMakeLists.txt  C_basic_physics.cpp  C_basic_physics.h  Kraken.sln  Kraken.vcxproj  Kraken.vcxproj.filters  README.md  README_zh_CN.md  Source.def  Tech_Verif.7z  main.cpp  pch.h  project_structure_alpha_1.md
README/: README_zh_CN.md
docs/: coding_spec_zh_cn.md  outline.md
include/: launch.h
kraken/: CMakeLists.txt
kraken/include/: kraken.h  kraken_unit.h
kraken/src/: kraken_helloworld.cpp  kraken_unit.cpp
kraken_console/: .gitignore  IMgui.cs  KrakenConsole.csproj  KrakenConsole.sln  ProcessController.cs  ProcessCtrl.cs  README.md  README_zh_CN.md  Window.cs  change log.md  kraken-console.netkan
kraken_console/Properties/: AssemblyInfo.cs
src/: dllmain.cpp  launch.cpp  source.def
